--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
     "font-awesome": "^4.5.0",
+    "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
     "jointjs": "^0.9.7",
     "jquery": "^2.2.0",
@@ -40,7 +41,9 @@
     "koa-static": "^2.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.4",
     "react-router": "^2.0.0",
+    "redux": "^3.4.0",
     "sqlite3": "^3.1.1",
     "tether": "^1.1.1",
     "tracer": "^0.8.3"
