--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "koa-router": "^5.4.0",
     "koa-send": "^3.1.1",
     "koa-static": "^2.0.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-notifications": "^1.2.0",
     "react-redux": "^4.4.4",
     "react-router": "^2.0.0",
     "redux": "^3.4.0",
