--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa-router": "^5.4.0",
     "koa-send": "^3.1.1",
     "koa-static": "^2.0.0",
+    "moment": "^2.12.0",
     "pg": "^4.5.3",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.0.1",
