--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "npm run clear && webpack -p --progress --display-error-details --config ./build/prod.config.js",
     "server": "nodemon ./server/index.js",
     "server-prod": "node ./server/index.js",
-    "lint": "eslint ./src ./server",
+    "lint-ts": "tslint --force -c ./src/tslint.json ./src/**/*.ts",
+    "lint-tsx": "tslint --force -c ./src/tslint.json ./src/**/*.tsx",
+    "lint": "npm run lint-ts && npm run lint-tsx",
     "clear": "rimraf ./public/index.js ./public/styles.css ./public/img ./public/fonts",
     "migrate:latest": "knex migrate:latest --knexfile server/src/knexfile.js",
     "migrate:rollback": "knex migrate:rollback --knexfile server/src/knexfile.js"
@@ -55,15 +57,7 @@
     "tracer": "^0.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.7.0",
-    "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "image-webpack-loader": "^1.6.3",
@@ -73,6 +67,9 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.2",
+    "tslint": "^3.7.4",
+    "typescript": "^1.8.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
