--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+  "jshint.enable": false,
   "javascript.validate.enable": false,
   "editor.fontFamily": "Hack",
   "editor.tabSize": 2,
