--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
