--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/gios/solar-nets#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "^4.0.0-beta",
     "chart.js": "^1.1.1",
     "font-awesome": "^4.5.0",
     "immutable": "^3.7.6",
@@ -43,6 +43,7 @@
     "koa-static": "^2.0.0",
     "moment": "^2.12.0",
     "pg": "^4.5.3",
+    "popper.js": "^1.12.5",
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.0.1",
     "react-chartjs": "^0.7.3",
